; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_httpd.c_vlclua_httpd_redirect_new.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_httpd.c_vlclua_httpd_redirect_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"httpd_host\00", align 1
@.str.1 = private unnamed_addr constant [33 x i8] c"Failed to create HTTPd redirect.\00", align 1
@.str.2 = private unnamed_addr constant [15 x i8] c"httpd_redirect\00", align 1
@vlclua_httpd_redirect_delete = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [5 x i8] c"__gc\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vlclua_httpd_redirect_new to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_httpd_redirect_new(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32**, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32**, align 8
  store i32* %0, i32** %3, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = call i64 @luaL_checkudata(i32* %9, i32 1, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %11 = inttoptr i64 %10 to i32**
  store i32** %11, i32*** %4, align 8
  %12 = load i32*, i32** %3, align 8
  %13 = call i8* @luaL_checkstring(i32* %12, i32 2)
  store i8* %13, i8** %5, align 8
  %14 = load i32*, i32** %3, align 8
  %15 = call i8* @luaL_checkstring(i32* %14, i32 3)
  store i8* %15, i8** %6, align 8
  %16 = load i32**, i32*** %4, align 8
  %17 = load i32*, i32** %16, align 8
  %18 = load i8*, i8** %5, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = call i32* @httpd_RedirectNew(i32* %17, i8* %18, i8* %19)
  store i32* %20, i32** %7, align 8
  %21 = load i32*, i32** %7, align 8
  %22 = icmp ne i32* %21, null
  br i1 %22, label %26, label %23

23:                                               ; preds = %1
  %24 = load i32*, i32** %3, align 8
  %25 = call i32 @luaL_error(i32* %24, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0))
  store i32 %25, i32* %2, align 4
  br label %43

26:                                               ; preds = %1
  %27 = load i32*, i32** %3, align 8
  %28 = call i32** @lua_newuserdata(i32* %27, i32 8)
  store i32** %28, i32*** %8, align 8
  %29 = load i32*, i32** %7, align 8
  %30 = load i32**, i32*** %8, align 8
  store i32* %29, i32** %30, align 8
  %31 = load i32*, i32** %3, align 8
  %32 = call i64 @luaL_newmetatable(i32* %31, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0))
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %40

34:                                               ; preds = %26
  %35 = load i32*, i32** %3, align 8
  %36 = load i32, i32* @vlclua_httpd_redirect_delete, align 4
  %37 = call i32 @lua_pushcfunction(i32* %35, i32 %36)
  %38 = load i32*, i32** %3, align 8
  %39 = call i32 @lua_setfield(i32* %38, i32 -2, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0))
  br label %40

40:                                               ; preds = %34, %26
  %41 = load i32*, i32** %3, align 8
  %42 = call i32 @lua_setmetatable(i32* %41, i32 -2)
  store i32 1, i32* %2, align 4
  br label %43

43:                                               ; preds = %40, %23
  %44 = load i32, i32* %2, align 4
  ret i32 %44
}

declare dso_local i64 @luaL_checkudata(i32*, i32, i8*) #1

declare dso_local i8* @luaL_checkstring(i32*, i32) #1

declare dso_local i32* @httpd_RedirectNew(i32*, i8*, i8*) #1

declare dso_local i32 @luaL_error(i32*, i8*) #1

declare dso_local i32** @lua_newuserdata(i32*, i32) #1

declare dso_local i64 @luaL_newmetatable(i32*, i8*) #1

declare dso_local i32 @lua_pushcfunction(i32*, i32) #1

declare dso_local i32 @lua_setfield(i32*, i32, i8*) #1

declare dso_local i32 @lua_setmetatable(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
